# agent-sdk

./: CONTRIBUTING.md  LICENSE.txt  README.md
docs/: README.md  api_documentation.md  attribute_mappings_example.json
docs/schemas/: input_json_schema.json  modular_dir_structure_schema.json  nested_dir_structure_schema.json
examples/: README.md  api_server_example.py  create_advanced_notebook.py  create_agent_from_description.py  create_agent_from_json_file.py  create_agent_from_modular_directory.py  create_agent_from_nested_directory.py  create_agent_programmatically.py  create_agent_with_dependent_metadata.py  create_apex_class_example.py  create_notebooks.py  deploy_agent_token_flow.py  deploy_prompt_template_example.py  export_salesforce_agent_example.py  generate_prompt_template_example.py  generate_template_with_apex_example.py  run_agent.py  run_example.py  tune_prompt_template_example.py
examples/assets/: input.json
examples/assets/dependent_metadata_dir/: README.md
examples/assets/nested_agent_dir/: order_management_agent.json
examples/exported_agents/agent007/: agent007.json
examples/integration_tests/: .env.example  .gitignore  Dockerfile  README.md  run_integration_tests.py  run_test.sh  run_tests_custom.py  run_tests_pytest.py  test_integration_pytest.py
examples/mcp_servers/ai-assist/: README.md  pyproject.toml
examples/mcp_servers/ai-assist/src/ai_assist/: __init__.py  models.py  server.py  utils.py
examples/notebooks/: README.md  advanced_integrations.ipynb  create_agent_examples.ipynb  run_agent_examples.ipynb
(+24 files in other folders)
