[project]
name = "ai-assist"
version = "0.1.0"
description = "Agentforce AI Assist, create agentforce agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [ 
    "mcp>=1.6.0",
    "httpx>=0.28.1",
    "requests>=2.25.0",
    "simple-salesforce>=1.12.0",
    "agentforce-sdk==0.1.4",
    "aiohttp>=3.8.5",
    "pydantic>=2.10.0"
    ]
[[project.authors]]
name = "Damien Fleminks"
email = "dfleminks@salesforce.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
ai-assist = "ai_assist:main"
